--- a/wiki/FAQs.wiki
+++ b/wiki/FAQs.wiki
@@ -22,7 +22,10 @@ MoonPy is the name of our most promising game we have developed for project teth
 MoonPy is currently at a stage where multiplayer free for all games are possible. All the units except for balloons are implemented, and since there is no FoW balloons aren't really important anyway.
 
 ====How do I find someone to play against online?====
-MoonPy doesn't have a master server yet and so the only way to play is by joining directly with IP addresses. The best place to try and find someone to play against is on irc.freenode.com channel #moonpy, if you wait there long enough one of the devs or another player will eventually how up. 
+MoonPy doesn't have a master server yet and so the only way to play is by joining directly with IP addresses. The best place to try and find someone to play against is IRC. If you go to irc.freenode.com channel #moonpy, wait long enough and someone will eventually show up
+
+====I've been waiting forever for someone else to show up on IRC, how long should I wait?====
+We're still a small community so it may take some time but one of the devs will show up eventually. If you really want to find people to play with, tell your friends about MoonPy. The more people that know about project tether, the more people that will check in and the easier it will be to find someone to play against.
 
 ====Why are you using python, why not a real programming language like C++?====
 There are many reasons we're using python but the top 3 reasons are: it's simple to code, it's easily portable to different OS's, and it does what we need.
@@ -38,6 +41,9 @@ Mostly because Moonbase Commander is essentially dead, practically no one plays 
 
 ====What changes are you planning?====
 The biggest change we want to make is the number of players. The original Moonbase Commander can not have more then 4 players in a single game which we find inconvenient. We would also like to add smarter AI, hotseat capabilities, and the ability to implement mods. 
+
+====I found a bug, what do I do?====
+Great, identifying them is the hardest part. First of all, check the [http://code.google.com/p/tether/issues/list issue tracker] to find out if it's already known. If it isn't please report it there and give as much detail. Also uploading your MoonPy.log file for that game will help as well.
 
 ====How can I help out with the project?=====
 Cool! We can always use some help to keep this going. Currently the biggest help we need is people to help us identify bugs, so just downloading it, playing it, and reporting back to us would be *very* useful. In addition to help with the code we also could use graphics, sounds, music, documentation, etc. You can always check out the [http://code.google.com/p/tether/issues/list issue tracker], or post onto our [http://groups.google.com/group/project-tether mailing list]. Also just spreading the word about project tether is a big benefit to us as well.
