--- a/wiki/FAQs.wiki
+++ b/wiki/FAQs.wiki
@@ -19,7 +19,7 @@ While Moonbase Commander is a great game, there are some flaws and glitches that
 MoonPy is the name of our most promising game we have developed for project tether so far. It is written in python (hence the name) and is currently the only program we plan on releasing.
 
 ====How far along is MoonPy?=====
-MoonPy is currently at a stage where multiplayer free for all games are possible. All the units except for balloons are implemented, and since there is no FoW balloons aren't really important anyway.
+MoonPy is currently at a stage where multiplayer free for all games are possible. All the units except for balloons are implemented, and since there is no FoW yet balloons are pretty pointless.
 
 ====How do I find someone to play against online?====
 MoonPy doesn't have a master server yet and so the only way to play is by joining directly with IP addresses. The best place to try and find someone to play against is IRC. If you go to irc.freenode.com channel #moonpy, wait long enough and someone will eventually show up
