--- a/wiki/MoonPy_Development_Plan.wiki
+++ b/wiki/MoonPy_Development_Plan.wiki
@@ -40,7 +40,7 @@ These are the general requirements for each major release of MoonPy. Currently w
   * All major bugs (those affecting our ability to play) found and fixed: complete
 
 = Requirements for version 0.9.00 = 
-  * All obsolete code removed: in progress
+  * All obsolete code removed: complete
   * Placeholder graphics replaced: in progress
   * Team play available: planned
   * Fog of War: planned
