--- a/wiki/MoonPy_Development_Plan.wiki
+++ b/wiki/MoonPy_Development_Plan.wiki
@@ -41,18 +41,18 @@ These are the general requirements for each major release of MoonPy. Currently w
 
 = Requirements for version 0.9.00 = 
   * All obsolete code removed: complete
-  * Placeholder graphics replaced: in progress
-  * Team play available: planned
+  * Placeholder graphics replaced: complete
+  * Team play available: in progress
+  * Hotseat capabilities: planned
+  * Master server implemented: planned
+  * Ability to play against bots: planned
   * Fog of War: planned
   * Balloons: planned
-  * Wind: planned
-  * Ability to create custom maps: planned
-  * Ability to load/save games: planned
 
 = Requirements for version 1.0.00 = 
 
-  * Master server implemented: planned
-  * Ability to play against bots: planned
+  * Wind: planned
+  * Ability to create custom maps: planned
+  * Ability to load/save games: planned
   * Ability to create custom mods: planned
-  * Hotseat capabilities: planned
   * All minor bugs bugs found and fixed: planned
