--- a/wiki/FAQs.wiki
+++ b/wiki/FAQs.wiki
@@ -10,7 +10,7 @@ Project tether is an open source project focused on recreating the classic strat
 Moonbase Commander has quite often been called "the best game no one has ever heard of". Most people describe it as a unique combination of Starcraft and Scorched Earth but that doesn't say much. The best way to find out what Moonbase Commander is like is to play the game.
 
 ====Well then where can I go to play the game?====
-We used to have a copy of the free trial available for download here. Sadly because of space limitations we have had to remove it to make room for other stuff. You could do a web search to find a copy online, or you could simply download and play [http://code.google.com/p/tether/downloads/list MoonPy].
+You could do a web search to find a copy of the trial version online, or you could simply download and play [http://code.google.com/p/tether/downloads/list MoonPy].
 
 ====Moonbase Commander absolutely rocks! Why recreate something thats so perfect?====
 While Moonbase Commander is a great game, there are some flaws and glitches that have never been fixed. Because the game has not received any support from the parent company for over 7 years we assume that they will never be resolved. Rather then live with it we started this project to resolve these flaws ourselves.
@@ -20,6 +20,11 @@ MoonPy is the name of our most promising game we have developed for project teth
 
 ====How far along is MoonPy?=====
 MoonPy is currently at a stage where multiplayer free for all games are possible. All the units except for balloons are implemented, and since there is no FoW yet balloons are pretty pointless.
+
+
+====How do I play MoonPy single player?====
+MoonPy has no single player option at this time, only multiplayer. The ability to play against bots is planned but not yet implemented. We have no intention on creating a campaign for MoonPy. 
+
 
 ====How do I find someone to play against online?====
 MoonPy doesn't have a master server yet and so the only way to play is by joining directly with IP addresses. The best place to try and find someone to play against is on IRC. If you go to irc.freenode.com channel #moonpy and wait long enough, someone will eventually show up.
@@ -43,7 +48,7 @@ Mostly because Moonbase Commander is essentially dead, practically no one plays 
 The biggest change we want to make is the number of players. The original Moonbase Commander can not have more then 4 players in a single game which we find inconvenient. We would also like to add smarter AI, hotseat capabilities, and the ability to implement mods. 
 
 ====I found a bug, what do I do?====
-Great, identifying them is the hardest part. First of all, check the [http://code.google.com/p/tether/issues/list issue tracker] to find out if it's already known. If it isn't please report it there and give as much detail, Don't forget to upload your MoonPy.log file for that game when filling out the issue. You can also see if one of the devs is available on IRC as well. 
+Great, identifying them is the hardest part. First of all, check the [http://code.google.com/p/tether/issues/list issue tracker] to find out if it's already known. If it isn't please report it there and give as much detail as you can, don't forget to upload your MoonPy.log file for that game when filling out the issue. You can also see if one of the developers are available on IRC as well. 
 
 ====How can I help out with the project?=====
 Cool! We can always use some help to keep this going. Currently the biggest help we need is people to help us identify bugs, so just downloading it, playing it, and reporting back to us would be *very* useful. In addition to help with the code we also could use graphics, sounds, music, documentation, etc. You can always check out the [http://code.google.com/p/tether/issues/list issue tracker], or post onto our [http://groups.google.com/group/project-tether mailing list]. Also just spreading the word about project tether is a big benefit to us as well.
