--- a/wiki/user_manual.wiki
+++ b/wiki/user_manual.wiki
@@ -89,7 +89,7 @@ http://tether.googlecode.com/svn/wiki/images/terrain/tile_water.png Water: All u
 
 = Differences between MoonPy and Moonbase Commander =
 
-Because of fundamental differences between the MoonPy engine and the original Moonbase Commander (OMBC) engine. There are some subtle differences between the two. 
+Because of fundamental differences between the MoonPy engine and the original Moonbase Commander (OMBC) engine. There are some slight differences between the two. Some of these we are planning on eventually fixing, some we will not. Please check the [http://code.google.com/p/tether/issues/list issue tracker] for more information.
  # Anti-air's shoot incoming shots automatically: In OMBC when an anti-air detected an incoming shot a little missile would fly out to hit it. This would give players the possibility of hitting something before the anti-air missile hit. In MoonPy anti-air's are now instantaneous just like shields.
  # EMP's do no damage: In OMBC a direct hit by an EMP would do some damage, MoonPy EMP's do no damage even on a direct hit. 
  # Spike damage is not based on distance: In OMBC a spike would do 3 damage and depending on how far the spike had to travel down the tether would do less and less damage until it did no damage at all. In MoonPy a spike does 3 damage on a direct hit and only 1 damage if it travels down a tether regardless of how long/short it has to travel.
