updated wiki pages

--- a/wiki/user_manual.wiki
+++ b/wiki/user_manual.wiki
@@ -57,7 +57,7 @@ http://tether.googlecode.com/svn/wiki/images/units/mine.png Mines: 3HP, mines la
 
 http://tether.googlecode.com/svn/wiki/images/units/recall.png Recall: Converts a unit into energy without causing them to explode. Does 3 damage to enemy units and 5 damage to your own.
 
-http://tether.googlecode.com/svn/wiki/images/units/spike.png Spike: Spikes travel down tethers allowing them to hit more then one building and do damage when landing on a tether. Does 3 damage if it lands directly on a unit, 1 damage if it travels down a tether
+http://tether.googlecode.com/svn/wiki/images/units/spike.png Spike: Spikes travel down tethers allowing them to hit more then one building and do damage when landing on a tether. Does 3 damage if it lands directly on a unit, 1 damage if it travels down a tether. Spikes can land on tethers and travel down them to deal damage to both ends as well.
 
 http://tether.googlecode.com/svn/wiki/images/units/balloon.png Balloon: 3HP, expands your view in fog of war, but floats in the air and does not require a tether. (Note: This unit has not yet been implemented)
 
@@ -94,7 +94,8 @@ http://tether.googlecode.com/svn/wiki/images/terrain/tile_water.png Water: All u
 Because of fundamental differences between the MoonPy engine and the original Moonbase Commander (OMBC) engine. There are currently some differences between the two. The ones we are planning on fixing have been marked. The others we do not plan on changing but if someone wants to take the code and change it for us they are more then welcome to. Please check the [http://code.google.com/p/tether/issues/list issue tracker] for more information.
  # Anti-air's shoot incoming shots automatically: In OMBC when an anti-air detected an incoming shot a little missile would fly out to hit it. This would give players the possibility of hitting something before the anti-air missile hit. In MoonPy anti-air's are now instantaneous just like shields, though they still require one turn to reload.
  # EMP's do no damage: In OMBC a direct hit by an EMP would do some damage, MoonPy EMP's do no damage even on a direct hit. (note: This has been fixed as of version 0.8.10)
- # Spike damage is not based on distance: In OMBC a spike would do 3 damage and depending on how far the spike had to travel down the tether would do less and less damage until it did no damage at all. In MoonPy a spike does 3 damage on a direct hit and only 1 damage if it travels down a tether regardless of how long/short it has to travel.
+ # Spike damage is not based on distance: In OMBC a spike would do 3 damage and depending on how far the spike had to travel down the tether would do less and less damage until it did no damage at all. In MoonPy a spike does 3 damage on a direct hit and only 1 damage if it travels down a tether regardless of how long/short it has to travel. A hit on a tether deals only 1 damage to both ends of the tether.
  # No unique player colors: In OMBC, players would choose a color that would identify them to other players. In MoonPy all of "your" units are colored green while all enemies are colored red and all allies are colored blue. Although this makes it harder to identify and target a specific person, this change allows us to theoretically have an unlimited number of players rather then the 4 player cap OMBC had.
  # No balloons: Currently balloons can not be launched out. This is mostly due to the fact coding a 'floating' unit will take a lot of work and since there is no FoW there isn't really any need for balloons at this time. Balloons will be implemented later once FoW is done. 
  # 2D engine: Although OMBC used 2D graphics it was a fully 3D game that paid attention to things like 'up' and 'down' (especially noticeable with towers). MoonPy has a fully 2D engine so there is no height differences with units.
+ # Difference in unit radius': Because of the difference in sizing between units and tiles in MoonPy and OMBC, having radius effects at the exact ratio's they were in OMBC results in a very unbalanced game. We have modified the radius effect of some of the weapons so that while they are no longer mathematically the same, the overall effectiveness of the weapons are the same and remain balanced. More information on this can be found on the [http://code.google.com/p/tether/wiki/game_balancing_debate game balancing debate] page.
