Edited wiki page through web user interface.

--- a/wiki/user_manual.wiki
+++ b/wiki/user_manual.wiki
@@ -98,4 +98,4 @@ Because of fundamental differences between the MoonPy engine and the original Mo
  # No unique player colors: In OMBC, players would choose a color that would identify them to other players. In MoonPy all of "your" units are colored green while all enemies are colored red and all allies are colored blue. Although this makes it harder to identify and target a specific person, this change allows us to theoretically have an unlimited number of players rather then the 4 player cap OMBC had.
  # No balloons: Currently balloons can not be launched out. This is mostly due to the fact coding a 'floating' unit will take a lot of work and since there is no FoW there isn't really any need for balloons at this time. Balloons will be implemented later once FoW is done. 
  # 2D engine: Although OMBC used 2D graphics it was a fully 3D game that paid attention to things like 'up' and 'down' (especially noticeable with towers). MoonPy has a fully 2D engine so there is no height differences with units.
- # Difference in unit radius': Because of the difference in sizing between units and tiles in MoonPy and OMBC, having radius effects at the exact ratio's they were in OMBC results in a very unbalanced game. We have modified the radius effect of some of the weapons so that while they are no longer mathematically the same, the overall effectiveness of the weapons are the same and remain balanced. More information on this can be found on the [http://code.google.com/p/tether/wiki/game_balancing_debate game balancing debate] page.
+ # Difference in unit radius: Because of the difference in sizing between units and tiles in MoonPy and OMBC, having radius effects at the exact ratio's they were in OMBC results in a very unbalanced game. We have modified the radius effect of some of the weapons so that while they are no longer mathematically the same, the overall effectiveness of the weapons are the same and remain balanced. More information on this can be found on the [http://code.google.com/p/tether/wiki/game_balancing_debate game balancing debate] page.
